--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-.hero {
+:root {
   position: relative;
   min-height: 100vh;
   background-image: image-set(
@@ -12,9 +12,8 @@
   background-repeat: no-repeat;
 }
 
-/* Mobile: troca para versoes portrait */
 @media (max-width: 768px) {
-  .hero {
+  :root {
     background-image: image-set(
       url("./img/space_bg_HD_portrait_720x1280.png") 1x,
       url("./img/space_bg_FHD_portrait_1080x1920.png") 2x,
@@ -24,11 +23,10 @@
   }
 }
 
-.hero::after {
+:root:after {
   content: "";
   position: absolute;
   inset: 0;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0.55), rgba(0, 0, 0, 0.65));
 }
 
 html,
